# coffeetech_user_service

./: .gitignore  Dockerfile  README.md  dataBase.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
adapters/: notifications_client.py
domain/: __init__.py  repositories.py  schemas.py  services.py  user_repository.py  validators.py
domain/entities/: permission.py  role.py  role_entity.py  user.py  user_device.py  user_device_entity.py  user_entity.py  user_role.py  user_role_entity.py  user_session.py  user_state.py  user_state_entity.py
domain/repositories/: __init__.py  role_repository.py  user_device_repository.py  user_repository.py  user_role_repository.py  user_state_repository.py
domain/services/: __init__.py  email_configuration.py  email_sender_service.py  email_service.py  email_template_service.py  role_service.py  (+9 more)
endpoints/: auth.py  collaborators.py  invitation.py  notification.py  roles.py  token.py  users_service.py  utils.py
models/: models.py
tests/: mockdb.py  test_email_services.py  test_notification_service.py  test_user_repository.py  test_user_validators.py
use_cases/: __init__.py  change_password_use_case.py  delete_account_use_case.py  forgot_password_use_case.py  list_roles_use_case.py  login.py  login_use_case.py  login_use_case_di.py  logout_use_case.py  register_user_use_case.py  reset_password_use_case.py  update_profile_use_case.py  verify_email_use_case.py  verify_reset_token_use_case.py
utils/: FCM.py  email.py  logger.py  response.py  security.py  state.py  status.py  verification_token.py
(+22 files in other folders)
